# HybridFind

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/hybridfind/: __init__.py  __main__.py  config.py  core.py  utils.py
tests/: test_core.py
