[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybridfind"
version = "0.1.0"
description = "Hybrid semantic + keyword search — BM25 and vector similarity with Reciprocal Rank Fusion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Officethree Technologies" }]
keywords = ["search", "bm25", "tfidf", "hybrid-search", "rag", "information-retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
hybridfind = "hybridfind.__main__:main"

[project.urls]
Homepage = "https://github.com/MukundaKatta/HybridFind"
Repository = "https://github.com/MukundaKatta/HybridFind"
Issues = "https://github.com/MukundaKatta/HybridFind/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hybridfind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
